<resources>
    <string name="app_name">Переводчик</string>
    <string name="app_name_title">с историей переводов</string>
    <string name="item_language">Перевод</string>
    <string name="item_history">История</string>
    <string name="item_settings">Настройки</string>
    <string name="menu_about">О программе</string>
    <string name="menu_exit">Выход</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="title_about_lab">Данная программа была разработана специально для лабораторных
        работ.</string>
    <string name="title_about_app">Всё приложение является вымышленным и любое совпадение с реально
        существующими или когда-либо существовавшими приложениями случайно.</string>
    <string name="title_version">Версия 1.0 от 23.09.2017</string>
    <string name="title_author">© 2017 Ольга Моссоулина</string>

    <string name="text_button_left_language">Русский</string>
    <string name="text_button_right_language">Английский</string>
    <string name="text_search">Введите запрос</string>

    <string name="parrot">Попугай</string>
    <string name="transcription">|pær∂t|</string>
    <string name="name_foreign">Parrot</string>

    <string name="choose_language">Выбор языка</string>

    <string name="choice_delete">Удаление</string>
    <string name="choice_delete_text">Вы действительно хотите удалить запись?</string>
    <string name="choice_delete_ok">Да</string>
    <string name="choice_delete_cansel">Отмена</string>

    <string-array name="list_button_languages_entries">
        <item>Русский</item>
        <item>Английский</item>
        <item>Немецкий</item>
        <item>Французский</item>
        <item>Испанский</item>
        <item>Итальянский</item>
        <item>Голландский</item>
        <item>Латышский</item>
        <item>Эстонский</item>
        <item>Китайский</item>
    </string-array>

    <string-array name="list_translate">
        <item>Попугай - Parrot</item>
        <item>Птица - Bird</item>
        <item>Попугай - Parrot</item>
        <item>Птица - Bird</item>
        <item>Попугай - Parrot</item>
        <item>Птица - Bird</item>
        <item>Попугай - Parrot</item>
        <item>Птица - Bird</item>
        <item>Попугай - Parrot</item>
        <item>Птица - Bird</item>
        <item>Попугай - Parrot</item>
        <item>Птица - Bird</item>
        <item>Попугай - Parrot</item>
        <item>Птица - Bird</item>
        <item>Попугай - Parrot</item>
        <item>Птица - Bird</item>
        <item>Попугай - Parrot</item>
        <item>Птица - Bird</item>
        <item>Попугай - Parrot</item>
        <item>Птица - Bird</item>
        <item>Попугай - Parrot</item>
        <item>Птица - Bird</item>
        <item>Попугай - Parrot</item>
        <item>Птица - Bird</item>

    </string-array>

    <string name="add">Добавлено в избранные</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
