<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_menu_language"
            android:title="@string/item_language" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/item_history" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/item_settings" />

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_public"
                android:onClick="goToAboutActivity"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_exit"
                android:title="@string/menu_exit" />
        </menu>
    </item>
</menu>
